--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               love to visit New Delhi to buy some coffee
             </div>
             <div class="buttons">
-              <a href="/cv.txt" target="_blank"
+              <a href="/cv.pdf" target="_blank"
                 ><button class="btn">Download CV</button></a
               >
               <a href="/contact.html"
