--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="hamburger">
           <img
             class="ham"
-            src="http://assets.stickpng.com/images/588a6507d06f6719692a2d15.png"
+            src="/ham.png"
             alt=""
             width="23"
           />
           <img
             class="cross"
-            src="https://www.pngitem.com/pimgs/b/481-4817311_tic-tac-toe-png.png"
+            src="/cross.png"
             alt=""
             width="23"
           />
@@ -44,7 +44,7 @@
             <div class="about">Developer, Artist, Dog Lover</div>
             <div class="moreabout">
               I am a developer, and I love to drink coffee. I live in Pune and I
-              love to visit New Delhi to buy some coffee
+              love to visit Mumbai
             </div>
             <div class="buttons">
               <a href="/cv.pdf" target="_blank"
