--- a/services.html
+++ b/services.html
@@ -26,13 +26,13 @@
         <div class="hamburger">
           <img
             class="ham"
-            src="http://assets.stickpng.com/images/588a6507d06f6719692a2d15.png"
+            src="/ham.png"
             alt=""
             width="23"
           />
           <img
             class="cross"
-            src="https://www.pngitem.com/pimgs/b/481-4817311_tic-tac-toe-png.png"
+            src="/cross.png"
             alt=""
             width="23"
           />
