--- a/intro.html
+++ b/intro.html
@@ -40,10 +40,7 @@
         <div class="intro">
           <h2>About me</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis
-            fugit quos eius ut neque totam, esse amet numquam debitis at. Sunt
-            incidunt et veritatis quo? Modi ipsa aperiam, adipisci possimus
-            quasi esse perspiciatis vitae nam eaque ex!
+            I am a Certified Salesforce developer, with a passion for all things Salesforce. With some experience in development and management of complex business processes and systems. I am specialized in apex programming, new process design/implementation and integration procedures. I am also proficient in the use of tools and methods such as apex triggers, process builder, lightning web components, data loader, API integration, vlocity document templates, dataraptors and lightning app builder.
           </p>
           <h2>My Skills</h2>
           <div class="skillContainer">
