--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css">
     <title>Swapnil Rawat | Salesforce Dev</title>
 </head>
 
@@ -14,7 +14,7 @@
     <div class="intro">
         <div class="left">
             <div class="profile">
-                <img src="./img/profile.jfif"
+                <img src="profile.jfif"
                     alt="..." />
             </div>
             <h1 class="name">Swapnil Rawat</h1>
@@ -25,12 +25,12 @@
         </div>
         <div class="right">
             <div class="current">
-                <img src="./img/bfhl.jfif"
+                <img src="bfhl.jfif"
                     alt="..." />
                 <p>Bajaj Finserv Health</p>
             </div>
             <div class="education">
-                <img src="./img/vit.jfif"
+                <img src="vit.jfif"
                     alt="..." />
                 <p>VIT Chennai</p>
             </div>
@@ -53,13 +53,13 @@
         <h1>Featured</h1>
         <div class="container">
             <div class="featuredItem">
-                <img src="./img/pd1.jfif"
+                <img src="pd1.jfif"
                     alt="..." />
                 <p class="bold">Salesforce Certified Platform Developer I</p>
                 <p>for successfully completing certification requirements</p>
             </div>
             <div class="featuredItem">
-                <img src="./img/hom.jfif"
+                <img src="hom.jfif"
                     alt="..." />
                 <p class="bold">Hero of the Moment - September 2021</p>
                 <p>
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="featuredItem">
-                <img src="./img/coa.jfif"
+                <img src="coa.jfif"
                     alt="..." />
                 <p class="bold">Certificate of Appreciation</p>
                 <p>For being part of the Aarogya Care - Digital Aided Sales Launch</p>
@@ -79,7 +79,7 @@
         <h1>Experience</h1>
         <div class="experienceItem">
             <div class="company">
-                <img src="./img/bfhl.jfif"
+                <img src="bfhl.jfif"
                 alt="..." />
                 <div>
                     <p>Bajaj Finserv Health</p>
