--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <ul>
-                <li>
+                <li class="not-last">
                     <div>
                         <p>Associate Salesforce Developer</p>
                         <p>July 2021 - Present</p>
