--- a/index.html
+++ b/index.html
@@ -79,28 +79,29 @@
         <h1>Experience</h1>
         <div class="experienceItem">
             <div class="company">
-                <img src="bfhl.jfif"
-                alt="..." />
-                <div>
+                <img src="bfhl.jfif" alt="..." class="logo">
+                <div class="details">
                     <p>Bajaj Finserv Health</p>
                     <p>1 yr 1 mo</p>
                     <p>Pune, Maharashtra, India</p>
                 </div>
             </div>
-            <ul>
-                <li class="not-last">
-                    <div>
-                        <p>Associate Salesforce Developer</p>
-                        <p>July 2021 - Present</p>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <p>Technology Intern</p>
-                        <p>Feb 2021 - June 2021</p>
-                    </div>
-                </li>
-            </ul>
+            <div class="role">
+                <div class="circle"></div>
+                <div class="line"></div>
+                <div class="details">
+                    <p>Associate Salesforce Developer</p>
+                    <p>July 2021 - Present</p>
+                </div>
+            </div>
+            <div class="role">
+                <div class="circle"></div>
+                <div class="line"></div>
+                <div class="details">
+                    <p>Technology Intern</p>
+                    <p>Feb 2021 - June 2021</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
