--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div class="intro">
         <div class="left">
             <div class="profile">
-                <img src="profile.jfif"
-                    alt="..." />
+                <img src="profile.jfif" alt="..." />
             </div>
             <h1 class="name">Swapnil Rawat</h1>
             <p class="headline">
@@ -25,13 +24,11 @@
         </div>
         <div class="right">
             <div class="current">
-                <img src="bfhl.jfif"
-                    alt="..." />
+                <img src="bfhl.jfif" alt="..." />
                 <p>Bajaj Finserv Health</p>
             </div>
-            <div class="education">
-                <img src="vit.jfif"
-                    alt="..." />
+            <div class="grad">
+                <img src="vit.jfif" alt="..." />
                 <p>VIT Chennai</p>
             </div>
         </div>
@@ -53,14 +50,12 @@
         <h1>Featured</h1>
         <div class="container">
             <div class="featuredItem">
-                <img src="pd1.jfif"
-                    alt="..." />
+                <img src="pd1.jfif" alt="..." />
                 <p class="bold">Salesforce Certified Platform Developer I</p>
                 <p>for successfully completing certification requirements</p>
             </div>
             <div class="featuredItem">
-                <img src="hom.jfif"
-                    alt="..." />
+                <img src="hom.jfif" alt="..." />
                 <p class="bold">Hero of the Moment - September 2021</p>
                 <p>
                     Award for exploring the platform events options and executing on the
@@ -68,8 +63,7 @@
                 </p>
             </div>
             <div class="featuredItem">
-                <img src="coa.jfif"
-                    alt="..." />
+                <img src="coa.jfif" alt="..." />
                 <p class="bold">Certificate of Appreciation</p>
                 <p>For being part of the Aarogya Care - Digital Aided Sales Launch</p>
             </div>
@@ -77,6 +71,7 @@
     </div>
     <div class="experience">
         <h1>Experience</h1>
+
         <div class="experienceItem">
             <div class="company">
                 <img src="bfhl.jfif" alt="..." class="logo">
@@ -91,7 +86,7 @@
                 <div class="line"></div>
                 <div class="details">
                     <p>Associate Salesforce Developer</p>
-                    <p>July 2021 - Present</p>
+                    <p>Jul 2021 - Present</p>
                 </div>
             </div>
             <div class="role">
@@ -99,11 +94,93 @@
                 <div class="line"></div>
                 <div class="details">
                     <p>Technology Intern</p>
-                    <p>Feb 2021 - June 2021</p>
+                    <p>Feb 2021 - Jun 2021</p>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="experienceItem">
+            <div class="company">
+                <img src="atechnos.jfif" alt="..." class="logo">
+                <div class="details">
+                    <p>ATechnos</p>
+                    <p>2 mos</p>
+                    <p>Gurugram, Haryana, India</p>
+                </div>
+            </div>
+            <div class="role">
+                <div class="circle"></div>
+                <div class="line"></div>
+                <div class="details">
+                    <p>Android Development Intern</p>
+                    <p>May 2020 - Jun 2020</p>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="experienceItem">
+            <div class="company">
+                <img src="cogniable.jfif" alt="..." class="logo">
+                <div class="details">
+                    <p>CogniAble</p>
+                    <p>1 mo</p>
+                    <p>Gurugram, Haryana, India</p>
+                </div>
+            </div>
+            <div class="role">
+                <div class="circle"></div>
+                <div class="line"></div>
+                <div class="details">
+                    <p>Frontend Development Intern</p>
+                    <p>May 2019</p>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="experienceItem">
+            <div class="company">
+                <img src="renaissance.jfif" alt="..." class="logo">
+                <div class="details">
+                    <p>Renaissance VITC</p>
+                    <p>5 mos</p>
+                    <p>Chennai, Tamil Nadu, India</p>
+                </div>
+            </div>
+            <div class="role">
+                <div class="circle"></div>
+                <div class="line"></div>
+                <div class="details">
+                    <p>Marketing Team</p>
+                    <p>Sep 2018 - Jan 2019</p>
                 </div>
             </div>
         </div>
     </div>
+    <div class="education">
+        <h1>Education</h1>
+        <div class="educationItem">
+            <div class="school">
+                <img src="vit.jfif" alt="" class="logo">
+                <div class="details">
+                    <p>Vellore Institute of Technology</p>
+                    <p>Bachelor of Technology - BTech, Computer Science</p>
+                    <p>2017 - 2021</p>
+                    <p>Grade: 8.69 CGPA</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="skills">
+        <h1>Skills</h1>
+        <p>Salesforce.com Development | Salesforce Vlocity | Apex Programming | Front-end Development | Android Development | Salesforce.com | Salesforce Lightning | Salesforce Sales Cloud | Salesforce Service Cloud | Lightning Web Components</p>
+    </div>
+
 </body>
 
 </html>
