--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="contact">
         <h1>Contact</h1>
         <div class="contactItem">
-            <div class="school">
+            <div class="info">
                 <svg viewBox="0 0 24 24" data-supported-dps="24x24" fill="white" class="logo">
                     <path d="M2 4v13a3 3 0 003 3h14a3 3 0 003-3V4zm18 2v1.47l-8 5.33-8-5.33V6zm-1 12H5a1 1 0 01-1-1V8.67L12 14l8-5.33V17a1 1 0 01-1 1z"></path>
                   </svg>
@@ -194,7 +194,7 @@
             </div>
         </div>
         <div class="contactItem">
-            <div class="school">
+            <div class="info">
                 <svg viewBox="0 0 24 24" data-supported-dps="24x24" fill="white" class="logo">
                     <path d="M21.7 19.18l-1.92 1.92a3.07 3.07 0 01-3.33.67 25.52 25.52 0 01-8.59-5.63 25.52 25.52 0 01-5.63-8.59 3.07 3.07 0 01.67-3.33L4.82 2.3a1 1 0 011.41 0l3.15 3.11A1.1 1.1 0 019.41 7L7.59 8.73a20.51 20.51 0 007.68 7.68l1.78-1.79a1.1 1.1 0 011.54 0l3.11 3.11a1 1 0 010 1.41z"></path>
                   </svg>
@@ -205,7 +205,7 @@
             </div>
         </div>
         <div class="contactItem">
-            <div class="school">
+            <div class="info">
                 <svg viewBox="0 0 24 24" data-supported-dps="24x24" fill="white" class="logo">
                     <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"></path>
                   </svg>
