--- a/index.html
+++ b/index.html
@@ -48,24 +48,26 @@
     </div>
     <div class="featured">
         <h1>Featured</h1>
-        <div class="container">
-            <div class="featuredItem">
-                <img src="pd1.jfif" alt="..." />
-                <p class="bold">Salesforce Certified Platform Developer I</p>
-                <p>for successfully completing certification requirements</p>
-            </div>
-            <div class="featuredItem">
-                <img src="hom.jfif" alt="..." />
-                <p class="bold">Hero of the Moment - September 2021</p>
-                <p>
-                    Award for exploring the platform events options and executing on the
-                    POC
-                </p>
-            </div>
-            <div class="featuredItem">
-                <img src="coa.jfif" alt="..." />
-                <p class="bold">Certificate of Appreciation</p>
-                <p>For being part of the Aarogya Care - Digital Aided Sales Launch</p>
+        <div class="scroll">
+            <div class="container">
+                <div class="featuredItem">
+                    <img src="pd1.jfif" alt="..." />
+                    <p class="bold">Salesforce Certified Platform Developer I</p>
+                    <p>for successfully completing certification requirements</p>
+                </div>
+                <div class="featuredItem">
+                    <img src="hom.jfif" alt="..." />
+                    <p class="bold">Hero of the Moment - September 2021</p>
+                    <p>
+                        Award for exploring the platform events options and executing on the
+                        POC
+                    </p>
+                </div>
+                <div class="featuredItem">
+                    <img src="coa.jfif" alt="..." />
+                    <p class="bold">Certificate of Appreciation</p>
+                    <p>For being part of the Aarogya Care - Digital Aided Sales Launch</p>
+                </div>
             </div>
         </div>
     </div>
