Upgarding to new Version

--- a/index.html
+++ b/index.html
@@ -1,223 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css">
-    <title>Swapnil Rawat | Salesforce Dev</title>
+    <title>Swapnil Rawat</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a047799fd8.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 </head>
-
 <body>
-    <div class="intro">
-        <div class="left">
-            <div class="profile">
-                <img src="profile.jfif" alt="..." />
-            </div>
-            <h1 class="name">Swapnil Rawat</h1>
-            <p class="headline">
-                Associate Salesforce Developer at Bajaj Finserv Health
-            </p>
-            <p>Pune, Maharashtra, India</p>
-        </div>
-        <div class="right">
-            <div class="current">
-                <img src="bfhl.jfif" alt="..." />
-                <p>Bajaj Finserv Health</p>
-            </div>
-            <div class="grad">
-                <img src="vit.jfif" alt="..." />
-                <p>VIT Chennai</p>
-            </div>
-        </div>
+    <div class="scroll-up-btn">
+        <i class="fa fa-angle-up"></i>
     </div>
-    <div class="about">
-        <h1>About</h1>
-        <p>
-            I am a Certified Salesforce developer, with a passion for all things
-            Salesforce. With some experience in development and management of
-            complex business processes and systems. I am specialized in apex
-            programming, new process design/implementation and integration
-            procedures. I am also proficient in the use of tools and methods such as
-            apex triggers, process builder, lightning web components, data loader,
-            omniscripts, vlocity document templates, dataraptors and lightning app
-            builder.
-        </p>
-    </div>
-    <div class="featured">
-        <h1>Featured</h1>
-        <div class="scroll">
-            <div class="container">
-                <div class="featuredItem">
-                    <img src="pd1.jfif" alt="..." />
-                    <p class="bold">Salesforce Certified Platform Developer I</p>
-                    <p>for successfully completing certification requirements</p>
-                </div>
-                <div class="featuredItem">
-                    <img src="hom.jfif" alt="..." />
-                    <p class="bold">Hero of the Moment - September 2021</p>
-                    <p>
-                        Award for exploring the platform events options and executing on the
-                        POC
-                    </p>
-                </div>
-                <div class="featuredItem">
-                    <img src="coa.jfif" alt="..." />
-                    <p class="bold">Certificate of Appreciation</p>
-                    <p>For being part of the Aarogya Care - Digital Aided Sales Launch</p>
-                </div>
-            </div>
+    <nav class="navbar">
+        <div class="max-width">
+            <div class="logo"><a href="#">Sales<span>force.</span></a></div>
+            <ul class="menu">
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
+            </ul>
         </div>
-    </div>
-    <div class="experience">
-        <h1>Experience</h1>
+    </nav>
 
-        <div class="experienceItem">
-            <div class="company">
-                <img src="bfhl.jfif" alt="..." class="logo">
-                <div class="details">
-                    <p>Bajaj Finserv Health</p>
-                    <p>1 yr 1 mo</p>
-                    <p>Pune, Maharashtra, India</p>
-                </div>
-            </div>
-            <div class="role">
-                <div class="circle"></div>
-                <div class="line"></div>
-                <div class="details">
-                    <p>Associate Salesforce Developer</p>
-                    <p>Jul 2021 - Present</p>
-                </div>
-            </div>
-            <div class="role">
-                <div class="circle"></div>
-                <div class="line"></div>
-                <div class="details">
-                    <p>Technology Intern</p>
-                    <p>Feb 2021 - Jun 2021</p>
-                </div>
+    <!-- Home Section -->
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, this is</div>
+                <div class="text-2">Swapnil Rawat</div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
+                <a href="https://www.linkedin.com/in/swapnil-rawat-866475147" target="_blank">Hire Me</a>
             </div>
         </div>
+    </section>
 
-        <hr>
+    <!-- About section coding -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About Me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="profile-1.jpg">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Swapnil and I'm a <span class="typing-2"></span></div>
+                    <p>I am a Certified Salesforce developer, with a passion for all things Salesforce. With some experience in development and management of complex business processes and systems. I am specialized in apex programming, new process design/implementation and integration procedures. I am also proficient in the use of tools and methods such as apex triggers, process builder, lightning web components, data loader, omniscripts, vlocity document templates, dataraptors and lightning app builder.</p>
+                    <a href="https://media-exp1.licdn.com/dms/document/C4E2DAQHlebDx_aXAUw/profile-treasury-document-pdf-analyzed/0/1645637400865?e=1655942400&v=beta&t=jRtjWH2CPWzI_5_rvs1VAEOE52_s7CzmPwwoJa22zlw" target="_blank">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
-        <div class="experienceItem">
-            <div class="company">
-                <img src="atechnos.jfif" alt="..." class="logo">
-                <div class="details">
-                    <p>ATechnos</p>
-                    <p>2 mos</p>
-                    <p>Gurugram, Haryana, India</p>
+    <!-- Services Section Code -->
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">My Services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fa-brands fa-html5"></i>
+                        <i class="fa-brands fa-css3"></i>
+                        <i class="fa-brands fa-js"></i>
+                        <div class="text">Web Design</div>
+                        <p>Front-end Development | React.js | Node.js | PugJS | MongoDB | Mongoose ODM | JavaScript | bcrypt | JSON Web Token (JWT) | HTML | Bootstrap | Cascading Style Sheets (CSS) | Back-End Web Development | Full-Stack Development | Express.js</p>
+                    </div>
                 </div>
-            </div>
-            <div class="role">
-                <div class="circle"></div>
-                <div class="line"></div>
-                <div class="details">
-                    <p>Android Development Intern</p>
-                    <p>May 2020 - Jun 2020</p>
-                </div>
-            </div>
-        </div>
 
-        <hr>
+                <div class="card">
+                    <div class="box">
+                        <i class="fa-brands fa-salesforce"></i>
+                        <div class="text">Salesforce</div>
+                        <p>Salesforce.com Development | Salesforce Vlocity | Apex Programming | Salesforce.com | Salesforce Lightning | Salesforce Sales Cloud | Salesforce Service Cloud | Lightning Web Components | Salesforce.com Implementation | Salesforce.com Administration | Apex Data Loader | SOQL | SOSL</p>
+                    </div>
+                </div>
 
-        <div class="experienceItem">
-            <div class="company">
-                <img src="cogniable.jfif" alt="..." class="logo">
-                <div class="details">
-                    <p>CogniAble</p>
-                    <p>1 mo</p>
-                    <p>Gurugram, Haryana, India</p>
-                </div>
-            </div>
-            <div class="role">
-                <div class="circle"></div>
-                <div class="line"></div>
-                <div class="details">
-                    <p>Frontend Development Intern</p>
-                    <p>May 2019</p>
+                <div class="card">
+                    <div class="box">
+                        <i class="fa-brands fa-android"></i>
+                        <div class="text">Apps Design</div>
+                        <p>Android Development | Java | Android Studio | Retrofit</p>
+                    </div>
                 </div>
             </div>
         </div>
+    </section>
 
-        <hr>
+    <!-- Skills section -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills &#38; experiences.</div>
+                    <ul>
+                        <li><p>Implementation of Platform events to overcome async operation limits</p></li>
+                        <li><p>Designed and implemented Event based data sync for Salesforce-Mobile app integration using Cometd with Kafka</p></li>
+                        <li><p>Creating and managing custom screens using lightning web components and vlocity omniscripts</p></li>
+                        <li><p>Creating and managing custom processes, apex triggers, vlocity integration procedures, and vlocity dataraptors</p></li>
+                        <li><p>Implemented several other projects including the two above</p></li>
+                        <li><p>Heavy data management focus with mass updates using data loader</p></li>
+                    </ul>
+                    <a href="https://www.linkedin.com/in/swapnil-rawat-866475147" target="_blank">Read more</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JS</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>99%</span>
+                        </div>
+                        <div class="line python"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Apex</span>
+                            <span>95%</span>
+                        </div>
+                        <div class="line apex"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-        <div class="experienceItem">
-            <div class="company">
-                <img src="renaissance.jfif" alt="..." class="logo">
-                <div class="details">
-                    <p>Renaissance VITC</p>
-                    <p>5 mos</p>
-                    <p>Chennai, Tamil Nadu, India</p>
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fa fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Swapnil Rawat</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fa fa-map-marker"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Tingrenagar, Pune</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fa fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">rawatswapnil911@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="role">
-                <div class="circle"></div>
-                <div class="line"></div>
-                <div class="details">
-                    <p>Marketing Team</p>
-                    <p>Sep 2018 - Jan 2019</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="education">
-        <h1>Education</h1>
-        <div class="educationItem">
-            <div class="school">
-                <img src="vit.jfif" alt="" class="logo">
-                <div class="details">
-                    <p>Vellore Institute of Technology</p>
-                    <p>Bachelor of Technology - BTech, Computer Science</p>
-                    <p>2017 - 2021</p>
-                    <p>Grade: 8.69 CGPA</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="skills">
-        <h1>Skills</h1>
-        <p>Salesforce.com Development | Salesforce Vlocity | Apex Programming | Front-end Development | Android Development | Salesforce.com | Salesforce Lightning | Salesforce Sales Cloud | Salesforce Service Cloud | Lightning Web Components</p>
-    </div>
-    <div class="contact">
-        <h1>Contact</h1>
-        <div class="contactItem">
-            <div class="info">
-                <svg viewBox="0 0 24 24" data-supported-dps="24x24" fill="white" class="logo">
-                    <path d="M2 4v13a3 3 0 003 3h14a3 3 0 003-3V4zm18 2v1.47l-8 5.33-8-5.33V6zm-1 12H5a1 1 0 01-1-1V8.67L12 14l8-5.33V17a1 1 0 01-1 1z"></path>
-                  </svg>
-                <div class="details">
-                    <p class="bold">Email</p>
-                    <p>rawatswapnil911@gmail.com</p>
-                </div>
-            </div>
-        </div>
-        <div class="contactItem">
-            <div class="info">
-                <svg viewBox="0 0 24 24" data-supported-dps="24x24" fill="white" class="logo">
-                    <path d="M21.7 19.18l-1.92 1.92a3.07 3.07 0 01-3.33.67 25.52 25.52 0 01-8.59-5.63 25.52 25.52 0 01-5.63-8.59 3.07 3.07 0 01.67-3.33L4.82 2.3a1 1 0 011.41 0l3.15 3.11A1.1 1.1 0 019.41 7L7.59 8.73a20.51 20.51 0 007.68 7.68l1.78-1.79a1.1 1.1 0 011.54 0l3.11 3.11a1 1 0 010 1.41z"></path>
-                  </svg>
-                <div class="details">
-                    <p class="bold">Phone</p>
-                    <p>7397437569 (Home)</p>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                        </div>
+                        <div class="button-area">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="contactItem">
-            <div class="info">
-                <svg viewBox="0 0 24 24" data-supported-dps="24x24" fill="white" class="logo">
-                    <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"></path>
-                  </svg>
-                <div class="details">
-                    <p class="bold">LinkedIn</p>
-                    <a href="https://www.linkedin.com/in/swapnil-rawat-866475147"><p>swapnil-rawat-866475147</p></a>
-                </div>
-            </div>
-        </div>
-    </div>
+    </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span>Created By <a href="https://www.linkedin.com/in/swapnil-rawat-866475147" target="_blank">Swapnil Rawat</a> | <span class="fa fa-copyright"></span> 2022 All rights reserved.</span>
+    </footer>
+
+    <script src="script.js"></script>
+
 </body>
-
 </html>
